Update .bashrc and .tmux.conf to use the new tmux-powerline
Signed-off-by: Rodrigo Belem <rodrigo.belem@gmail.com>

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -27,8 +27,8 @@ set -g status-utf8 on
 set -g status-justify "centre"
 set -g status-left-length 60
 set -g status-right-length 90
-set -g status-left "#(~/.tmux/tmux-powerline.git/status-left.sh)"
-set -g status-right "#(~/.tmux/tmux-powerline.git/status-right.sh)"
+set -g status-left "#(~/.tmux/tmux-powerline.git/powerline.sh left)"
+set -g status-right "#(~/.tmux/tmux-powerline.git/powerline.sh right)"
 
 set -g set-titles on
 set -g set-titles-string '#(whoami)@#H - tmux (#S) - #W'
@@ -53,5 +53,5 @@ set-window-option -g xterm-keys on
 # BUG: Should *not* hardcode /bin/bash here
 set -g default-command $SHELL
 
-bind C-[ run '~/.tmux/tmux-powerline.git/mute_statusbar.sh left'      # Mute left statusbar.
-bind C-] run '~/.tmux/tmux-powerline.git/mute_statusbar.sh right'     # Mute right statusbar.
+bind C-[ run '~/.tmux/tmux-powerline.git/mute_powerline.sh left'      # Mute left statusbar.
+bind C-] run '~/.tmux/tmux-powerline.git/mute_powerline.sh right'     # Mute right statusbar.
