--- a/.tmux.conf
+++ b/.tmux.conf
@@ -49,6 +49,9 @@ set-window-option -g aggressive-resize on
 # to make ctrl-arrow, etc. work
 set-window-option -g xterm-keys on
 
+# Copy the current shell env vars to the tmux session
+set -ga update-environment "DISPLAY DBUS_SESSION_BUS_ADDRESS SESSION_MANAGER GPG_AGENT_INFO GNOME_KEYRING_CONTROL"
+
 # Must set default-command to $SHELL, in order to not source ~/.profile
 # BUG: Should *not* hardcode /bin/bash here
 set -g default-command $SHELL
