Added my own tmux conf files
Signed-off-by: Nick Diego Yamane <nick.yamane@openbossa.org>

--- a/.config/terminator/config
+++ b/.config/terminator/config
@@ -4,10 +4,14 @@
   borderless = True
   sticky = True
 [keybindings]
+  go_up = None
+  next_tab = <Primary><Shift>Page_Down
   split_horiz = None
-  next_tab = None
+  prev_tab = <Primary><Shift>Page_Up
+  go_down = None
   split_vert = None
-  prev_tab = None
+  go_right = None
+  go_left = None
 [profiles]
   [[default]]
     scrollbar_position = hidden
