--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,60 +1,1 @@
-
-# Better colors for tmux
-source ~/.tmux/tmux-colors-solarized.git/tmuxcolors-256.conf
-# Change to Screen's ctrl-a escape sequence
-source /usr/share/doc/tmux/examples/screen-keys.conf
-# On Archlinux, this file is not under the same directory
-source /usr/share/tmux/screen-keys.conf
-# Use default vim keybindings
-source /usr/share/doc/tmux/examples/vim-keys.conf
-
-# -r: can be repeated without pressing prefix
-#     again (500ms after last '-r' action or prefix)
-bind -r < resize-pane -L 1
-bind -r > resize-pane -R 1
-bind -r - resize-pane -D 1
-bind -r + resize-pane -U 1
-
-# Byobu's Keybindings
-source $BYOBU_PREFIX/share/byobu/keybindings/f-keys.tmux
-
-# reload config without killing server
-bind r source-file ~/.tmux.conf \; display-message "  Config reloaded..."
-
-set -g status on
-set -g status-interval 2
-set -g status-utf8 on
-set -g status-justify "centre"
-set -g status-left-length 90
-set -g status-right-length 90
-set -g status-left "#(~/.tmux/tmux-powerline.git/powerline.sh left)"
-set -g status-right "#(~/.tmux/tmux-powerline.git/powerline.sh right)"
-
-set -g set-titles on
-set -g set-titles-string '#(whoami)@#H - tmux (#S) - #W'
-
-set -g history-limit 10000
-set -g clock-mode-style 24
-set -g mode-keys vi
-
-# Set the esc/alt disambiguation timeout to 50ms. The default is half a second,
-# which makes vim kind of painful.
-set-option -sg escape-time 50
-
-# The following helps with Shift-PageUp/Shift-PageDown
-set -g terminal-overrides 'xterm*:smcup@:rmcup@'
-
-set-window-option -g aggressive-resize on
-
-# to make ctrl-arrow, etc. work
-set-window-option -g xterm-keys on
-
-# Copy the current shell env vars to the tmux session
-set -ga update-environment "DISPLAY DBUS_SESSION_BUS_ADDRESS SESSION_MANAGER GPG_AGENT_INFO GNOME_KEYRING_CONTROL"
-
-# Must set default-command to $SHELL, in order to not source ~/.profile
-# BUG: Should *not* hardcode /bin/bash here
-set -g default-command $SHELL
-
-bind C-[ run '~/.tmux/tmux-powerline.git/mute_powerline.sh left'      # Mute left statusbar.
-bind C-] run '~/.tmux/tmux-powerline.git/mute_powerline.sh right'     # Mute right statusbar.
+/home/nick/projects/open-source/zdotfiles/.tmux.conf
