Remove the .tmux.conf sym link and add the actual conf file :)
Signed-off-by: Nick Diego Yamane <nick.yamane@openbossa.org>

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,1 +1,90 @@
-/home/nick/projects/open-source/zdotfiles/.tmux.conf
+#powerline
+#source "$HOME/.local/lib/python2.7/site-packages/powerline/bindings/tmux/powerline.conf"
+
+# remap prefix to C-z
+set -g prefix C-x
+unbind C-b
+bind C-x send-prefix
+
+# mouse scrolling and selection
+set-option -g mouse-select-pane off
+set-option -g mouse-resize-pane off
+set-option -g mouse-select-window off
+set-window-option -g mode-mouse off
+
+#mode keys
+setw -g mode-keys vi
+
+# 256-color terminal
+set-option -g default-terminal "screen-256color"
+
+# scroll limit
+set -g history-limit 100000
+
+# reload config without killing server
+bind r source-file ~/.tmux.conf \; display-message "  Config reloaded..."
+
+#### Theme (Solarized 256)
+source ~/.tmux/tmux-colors-solarized/tmuxcolors-256.conf
+
+##status
+set -g status on
+set -g status-utf8 on
+set -g status-interval 2
+
+# faster response
+set-option -sg escape-time 0
+
+# swiching to last window like screen
+bind-key C-z last-window
+
+# send C-z-z sends C-z to the shell
+bind-key z send-prefix
+
+# xterm keys!
+set-window-option -g xterm-keys on
+
+# sane splitting
+bind e split-window -h
+bind o split-window -v
+
+# nova janela com t
+bind t new-window
+#bind . next-window
+#bind , previous-window
+bind -n C-PageDown next-window
+bind -n C-PageUp previous-window
+
+# navigating around panes
+#bind x select-pane -t :.+
+#bind -n M-right select-pane -R
+#bind -n M-left select-pane -L
+#bind -n M-up select-pane -U
+#bind -n M-down select-pane -D
+# Smart pane switching with awareness of vim splits
+bind -n M-up run-shell 'tmux-vim-select-pane -U'
+bind -n M-down run-shell 'tmux-vim-select-pane -D'
+bind -n M-left run-shell 'tmux-vim-select-pane -L'
+bind -n M-right run-shell 'tmux-vim-select-pane -R'
+#bind -n "C-\\" run-shell 'tmux-vim-select-pane -l'
+
+# vi keys
+set-option -g status-keys vi
+#setw -g mode-keys vi
+
+# usar Escape para entrar no modo copia,
+# v para selecionar, p para colar,
+# = para lista de buffer
+unbind [
+bind Escape copy-mode
+unbind p
+bind p paste-buffer
+bind-key -t vi-copy 'v' begin-selection
+bind-key -t vi-copy 'y' copy-selection
+
+##CLIPBOARD selection integration
+##Requires prefix key before the command key
+#Copy tmux paste buffer to CLIPBOARD
+bind -n C-y run "tmux show-buffer | xclip -i -selection clipboard"
+#Copy CLIPBOARD to tmux paste buffer and paste tmux paste buffer
+bind -n C-p run "tmux set-buffer -- \"$(xclip -o -selection clipboard)\"; tmux paste-buffer"
