--- a/.tmux.conf
+++ b/.tmux.conf
@@ -47,13 +47,22 @@ set-window-option -g xterm-keys on
 # sane splitting
 bind e split-window -h
 bind o split-window -v
+bind -n C-E split-window -h
+bind -n C-O split-window -v
 
-# nova janela com t
+# nova janela com t/Ctrl-shift-t
 bind t new-window
-#bind . next-window
-#bind , previous-window
+bind -n C-T new-window
+# nova janela com Ctrl-shift-w
+bind -n C-W kill-window
+
+# switch between windows Ctrl-[pagedown|pageup]
 bind -n C-PageDown next-window
 bind -n C-PageUp previous-window
+
+# move windows Ctrl-shift-[left|right]
+bind-key -n C-S-Left swap-window -t -1
+bind-key -n C-S-Right swap-window -t +1
 
 # navigating around panes
 #bind x select-pane -t :.+
@@ -87,4 +96,4 @@ bind-key -t vi-copy 'y' copy-selection
 #Copy tmux paste buffer to CLIPBOARD
 bind -n C-y run "tmux show-buffer | xclip -i -selection clipboard"
 #Copy CLIPBOARD to tmux paste buffer and paste tmux paste buffer
-bind -n C-p run "tmux set-buffer -- \"$(xclip -o -selection clipboard)\"; tmux paste-buffer"
+#bind -n C-p run "tmux set-buffer -- \"$(xclip -o -selection clipboard)\"; tmux paste-buffer"
