--- a/.tmux.conf
+++ b/.tmux.conf
@@ -52,9 +52,9 @@ bind -n C-O split-window -v
 
 # nova janela com t/Ctrl-shift-t
 bind t new-window
-bind -n C-T new-window
+#bind -n C-T new-window
 # nova janela com Ctrl-shift-w
-bind -n C-W kill-window
+#bind -n C-W kill-window
 
 # switch between windows Ctrl-[pagedown|pageup]
 bind -n C-PageDown next-window
