Updating dot files
Signed-off-by: Nick Diego Yamane <nick.yamane@openbossa.org>

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -47,8 +47,8 @@ set-window-option -g xterm-keys on
 # sane splitting
 bind e split-window -h
 bind o split-window -v
-bind -n C-E split-window -h
-bind -n C-O split-window -v
+#bind -n C-E split-window -h
+#bind -n C-O split-window -v
 
 # nova janela com t/Ctrl-shift-t
 bind t new-window
