--- a/.config/terminator/config
+++ b/.config/terminator/config
@@ -29,21 +29,24 @@
   [[default]]
     scrollbar_position = hidden
     palette = "#000000:#cc0000:#4e9a06:#c4a000:#3465a4:#75507b:#06989a:#d3d7cf:#555753:#ef2929:#8ae234:#fce94f:#729fcf:#ad7fa8:#34e2e2:#eeeeec"
+    background_image = None
     background_darkness = 0.88
     background_type = transparent
     use_system_font = False
     cursor_color = "#f5f5f5"
     foreground_color = "#cacaca"
     show_titlebar = False
-    font = WenQuanYi Micro Hei Mono 8
+    font = WenQuanYi Micro Hei Mono 10
     allow_bold = False
     scrollback_infinite = True
   [[trans]]
+    background_image = None
   [[transp]]
     background_darkness = 0.72
     use_system_font = False
     font = Courier New 10
     background_type = transparent
+    background_image = None
 [layouts]
   [[default]]
     [[[child1]]]
