--- a/.gitmodules
+++ b/.gitmodules
@@ -73,12 +73,6 @@
 [submodule ".vim/unbundle/general/ZoomWin"]
 	path = .vim/unbundle/general/ZoomWin
 	url = git://github.com/vim-scripts/ZoomWin.git
-[submodule ".tmux/tmux-powerline.git"]
-	path = .tmux/tmux-powerline.git
-	url = git://github.com/erikw/tmux-powerline.git
-[submodule ".tmux/tmux-colors-solarized.git"]
-	path = .tmux/tmux-colors-solarized.git
-	url = git://github.com/seebi/tmux-colors-solarized.git
 [submodule ".vim/unbundle/general/vim-powerline"]
 	path = .vim/unbundle/general/vim-powerline
 	url = git://github.com/Lokaltog/vim-powerline.git
@@ -104,8 +98,10 @@
 	path = .vim/bundle-available/vim-fugitive
     url = git://github.com/tpope/vim-fugitive.git
 
-[submodule ".tmux/tmux-colors-solarized.git"]
-	path = .tmux/tmux-colors-solarized.git
+[submodule ".tmux/tmux-colors-solarized"]
+	path = .tmux/tmux-colors-solarized
 	url = git://github.com/seebi/tmux-colors-solarized.git
-
+[submodule ".tmux/tmux-powerline.git"]
+	path = .tmux/tmux-powerline.git
+	url = git://github.com/erikw/tmux-powerline.git
 
