--- a/.tmux.conf
+++ b/.tmux.conf
@@ -16,7 +16,7 @@ set-window-option -g mode-mouse off
 setw -g mode-keys vi
 
 # 256-color terminal
-set-option -g default-terminal "screen-256color"
+set -g default-terminal "screen-256color"
 
 # scroll limit
 set -g history-limit 100000
