--- a/.inputrc
+++ b/.inputrc
@@ -7,3 +7,5 @@ set visible-stats on
 set page-completions off
 "\e[A":history-search-backward
 "\e[B":history-search-forward
+"\e[1;5C": forward-word
+"\e[1;5D": backward-word
