Update for CERTI ubuntu env

--- a/.gitconfig
+++ b/.gitconfig
@@ -1,10 +1,11 @@
 [core]
     editor = vim
     abbrev = 12
+	autocrlf = true
 
 [user]
     name = Nick Diego Yamane
-    email = nick.diego@gmail.com
+    email = ndy@manaus.certi.org.br
 
 [color]
     ui = auto
@@ -21,4 +22,5 @@
     ll = log --pretty=format:\"%h %Cblue%cr%Creset %cn %Cgreen%s%Creset\"
     lll = log --pretty=oneline --abbrev-commit
     tag1 = tag | sort -n -t . -k 1,1 -k 2,2 -k 3,3
-	s = status
+    s = status
+    ra = rebase -i --autosquash
