More fuc*** updates

--- a/.gitconfig
+++ b/.gitconfig
@@ -24,3 +24,5 @@
     tag1 = tag | sort -n -t . -k 1,1 -k 2,2 -k 3,3
     s = status
     ra = rebase -i --autosquash
+[credential]
+	helper = store
