--- a/.tmux.conf
+++ b/.tmux.conf
@@ -97,3 +97,14 @@ bind-key -t vi-copy 'y' copy-selection
 bind -n C-y run "tmux show-buffer | xclip -i -selection clipboard"
 #Copy CLIPBOARD to tmux paste buffer and paste tmux paste buffer
 #bind -n C-p run "tmux set-buffer -- \"$(xclip -o -selection clipboard)\"; tmux paste-buffer"
+
+# TPM Plugins
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
+
+set-environment -g TMUX_PLUGIN_MANAGER_PATH '~/.tmux/plugins/'
+set -g @continuum-restore 'on'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run-shell '~/.tmux/plugins/tpm/tpm'
+
