More updates to work well in Arch

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -7,10 +7,7 @@ unbind C-b
 bind C-x send-prefix
 
 # mouse scrolling and selection
-set-option -g mouse-select-pane off
-set-option -g mouse-resize-pane off
-set-option -g mouse-select-window off
-set-window-option -g mode-mouse off
+#set -g mouse on
 
 #mode keys
 setw -g mode-keys vi
@@ -28,9 +25,9 @@ bind r source-file ~/.tmux.conf \; display-message "  Config reloaded..."
 source ~/.tmux/tmux-colors-solarized/tmuxcolors-256.conf
 
 ##status
-set -g status on
-set -g status-utf8 on
+set -g status off
 set -g status-interval 2
+bind-key -n C-B set -g status
 
 # faster response
 set-option -sg escape-time 0
@@ -71,10 +68,10 @@ bind-key -n C-S-Right swap-window -t +1
 #bind -n M-up select-pane -U
 #bind -n M-down select-pane -D
 # Smart pane switching with awareness of vim splits
-bind -n M-up run-shell 'tmux-vim-select-pane -U'
-bind -n M-down run-shell 'tmux-vim-select-pane -D'
-bind -n M-left run-shell 'tmux-vim-select-pane -L'
-bind -n M-right run-shell 'tmux-vim-select-pane -R'
+bind -n M-up run-shell '~/bin/tmux-vim-select-pane -U'
+bind -n M-down run-shell '~/bin/tmux-vim-select-pane -D'
+bind -n M-left run-shell '~/bin/tmux-vim-select-pane -L'
+bind -n M-right run-shell '~/bin/tmux-vim-select-pane -R'
 #bind -n "C-\\" run-shell 'tmux-vim-select-pane -l'
 
 # vi keys
@@ -99,8 +96,8 @@ bind -n C-y run "tmux show-buffer | xclip -i -selection clipboard"
 #bind -n C-p run "tmux set-buffer -- \"$(xclip -o -selection clipboard)\"; tmux paste-buffer"
 
 # TPM Plugins
-set -g @plugin 'tmux-plugins/tmux-resurrect'
-set -g @plugin 'tmux-plugins/tmux-continuum'
+#set -g @plugin 'tmux-plugins/tmux-resurrect'
+#set -g @plugin 'tmux-plugins/tmux-continuum'
 
 set-environment -g TMUX_PLUGIN_MANAGER_PATH '~/.tmux/plugins/'
 set -g @continuum-restore 'on'
@@ -108,3 +105,5 @@ set -g @continuum-restore 'on'
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run-shell '~/.tmux/plugins/tpm/tpm'
 
+bind -n M-i send-keys 'sudo pacman -S '
+bind -n M-l send-keys 'pacman -Ss '
