More vim color schemes and italic working on tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -13,7 +13,7 @@ bind C-x send-prefix
 setw -g mode-keys vi
 
 # 256-color terminal
-set -g default-terminal "screen-256color"
+set -g default-terminal "rxvt-unicode-256color"
 
 # scroll limit
 set -g history-limit 100000
