Some more updates for arch linux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -25,7 +25,7 @@ bind r source-file ~/.tmux.conf \; display-message "  Config reloaded..."
 source ~/.tmux/tmux-colors-solarized/tmuxcolors-256.conf
 
 ##status
-set -g status off
+set -g status on
 set -g status-interval 2
 bind-key -n C-B set -g status
 
@@ -42,13 +42,13 @@ bind-key z send-prefix
 set-window-option -g xterm-keys on
 
 # sane splitting
-bind e split-window -h
-bind o split-window -v
+bind e split-window -h -c '#{pane_current_path}'
+bind o split-window -v -c '#{pane_current_path}'
 #bind -n C-E split-window -h
 #bind -n C-O split-window -v
 
 # nova janela com t/Ctrl-shift-t
-bind t new-window
+bind t new-window -c '#{pane_current_path}'
 #bind -n C-T new-window
 # nova janela com Ctrl-shift-w
 #bind -n C-W kill-window
