Change default git email to gmail

--- a/.gitconfig
+++ b/.gitconfig
@@ -5,7 +5,7 @@
 
 [user]
     name = Nick Diego Yamane
-    email = ndy@manaus.certi.org.br
+    email = nick.diego@gmail.com
 
 [color]
     ui = auto
