tmux: add <meta-enter> keybinding for sudo

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -108,3 +108,4 @@ run-shell '~/.tmux/plugins/tpm/tpm'
 bind -n M-i send-keys 'sudo pacman -S '
 bind -n M-l send-keys 'pacman -Ss '
 bind -n M-u send-keys 'sudo pacman -Syu'
+bind -n M-Enter send-keys C-a 'sudo ' C-e
