Fix more setup.sh issues

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -68,10 +68,10 @@ bind-key -n C-S-Right swap-window -t +1
 #bind -n M-up select-pane -U
 #bind -n M-down select-pane -D
 # Smart pane switching with awareness of vim splits
-bind -n M-up run-shell '~/bin/tmux-vim-select-pane -U'
-bind -n M-down run-shell '~/bin/tmux-vim-select-pane -D'
-bind -n M-left run-shell '~/bin/tmux-vim-select-pane -L'
-bind -n M-right run-shell '~/bin/tmux-vim-select-pane -R'
+bind -n M-up run-shell '~/.bin/tmux-vim-select-pane -U'
+bind -n M-down run-shell '~/.bin/tmux-vim-select-pane -D'
+bind -n M-left run-shell '~/.bin/tmux-vim-select-pane -L'
+bind -n M-right run-shell '~/.bin/tmux-vim-select-pane -R'
 #bind -n "C-\\" run-shell 'tmux-vim-select-pane -l'
 
 # vi keys
